welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:48: error: nbBaggle is already defined as variable nbBaggle
var nbBaggle=0
    ^Poucet:6: error: not found: value n
    if (n < 3) {
        ^